Clase 11 - 13 + Proyecto Terminado (Responsive)

--- a/DW/9-CSSGrid-Basico/proyecto-responsive/index.html
+++ b/DW/9-CSSGrid-Basico/proyecto-responsive/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Check the best Food</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./mobile.css">
+    <link rel="stylesheet" href="./tablet.css" media="(min-width: 600px)">
+    <link rel="stylesheet" href="./desktop.css" media="(min-width: 800px)">
 </head>
 <body>
     <main>
         <section class="hero">
             <div class="info">
                 <h1 class="info-title">Check The<br>Best Food</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="info-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <button class="info-button">Book a table</button>
             </div>
             <img class="hero-image" src="https://i.postimg.cc/QCrLX0Cn/8-hero.png" alt="Imagen Hero de un plato de pasta con salsa y vegetales.">
@@ -43,7 +45,7 @@
                     <img src="https://i.postimg.cc/N05vbKZb/8-plate4.png" alt="Plato de pasta con salsa">
                 </div>
 
-                <div class="menu-grid-item">
+                <div class="menu-grid-item item-center">
                     <img src="https://i.postimg.cc/xdhDZ02Q/8-plate5.png" alt="Plato de pasta con salsa">
                 </div>
             </div>
