--- a/DW/9-CSSGrid-Basico/proyecto/index.html
+++ b/DW/9-CSSGrid-Basico/proyecto/index.html
@@ -12,7 +12,7 @@
         <section class="hero">
             <div class="info">
                 <h1 class="info-title">Check The<br>Best Food</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="info-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <button class="info-button">Book a table</button>
             </div>
             <img class="hero-image" src="https://i.postimg.cc/QCrLX0Cn/8-hero.png" alt="Imagen Hero de un plato de pasta con salsa y vegetales.">
