--- a/DW/2-intermedio/2-js-practico/test-js/9-conectar-js-html.html
+++ b/DW/2-intermedio/2-js-practico/test-js/9-conectar-js-html.html
@@ -4,21 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manipulación del DOM</title>
+    <title>DOM Manipulation</title>
 </head>
 <body>
-    <h1 class="englishxdxd">Título Principal</h1>
-    <p>Párrafo 01</p>
-    <p class="p02">Parrafo 02 con clase</p>
-    <p id="p03">Parrafo 03 con ID</p>
-    <input placeholder="Escribe algo" value="321"></input>
+    <h1>Titulo principal</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto, nesciunt! Quos, molestias veniam blanditiis amet deleniti officiis itaque illum culpa, corporis ipsam beatae, mollitia facere vitae libero totam! Optio, eveniet?</p>
+    <p class="p02">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore voluptas provident cumque accusamus harum corporis nostrum, cupiditate nam ducimus ullam iste hic? Ipsa, voluptates cum. Delectus nostrum accusamus id nulla!</p>
+    <p id="p03">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore voluptas provident cumque accusamus harum corporis nostrum, cupiditate nam ducimus ullam iste hic? Ipsa, voluptates cum. Delectus nostrum accusamus id nulla!</p>
+    <input placeholder="Ingresa algo" value="Texto prueba">
 
     <script src="./9-script.js"></script>
-
-    <p class="x"></p>
-    <p id="x"></p>
-    <p>
-        <p></p>
-    </p>
 </body>
 </html>
