--- a/DW/2-intermedio/2-js-practico/test-js/Practica/9-html-y-js.html
+++ b/DW/2-intermedio/2-js-practico/test-js/Practica/9-html-y-js.html
@@ -7,17 +7,12 @@
     <title>DOM Manipulation</title>
 </head>
 <body>
-    <h1 class="prueba">Título de la web</h1>
-    <div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, dolore velit ad quibusdam repellendus autem? Reprehenderit dolorem magnam exercitationem aperiam error saepe dignissimos doloremque! Cum consequuntur est sint assumenda aperiam.</p>
-    </div>
-    <div>
-        <p class="p02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, explicabo. Ratione ex dolorem ut explicabo? Blanditiis ducimus exercitationem libero similique eum minus qui ipsum dolor! Ratione perspiciatis fuga accusantium provident?</p>
-    </div>
-    <div>
-        <p id="p03">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi fugit maxime deleniti obcaecati autem cum reprehenderit, aliquid dicta voluptatibus commodi ipsa adipisci hic ipsum unde non quia accusamus eveniet sunt!</p>
-    </div>
-    <input placeholder="Escribe aquí">
+    <h1>Titulo principal</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aspernatur tempore consequuntur quisquam dignissimos! Corrupti voluptatem nulla iste odio aspernatur ipsum! Voluptates placeat doloribus ad cupiditate. Officia possimus doloremque corporis!</p>
+    <p class="p02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus molestias sequi laboriosam, beatae cupiditate reprehenderit omnis id recusandae, illum, autem tempore. Repellat sequi aliquid quae voluptates laboriosam, ratione a.</p>
+    <p id="p03">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus molestias sequi laboriosam, beatae cupiditate reprehenderit omnis id recusandae, illum, autem tempore. Repellat sequi aliquid quae voluptates laboriosam, ratione a.</p>
+    <input placeholder="Ingresa algo" value="xd">
+
     <script src="./9-script.js"></script>
 </body>
 </html>
