--- a/DW/2-intermedio/2-js-practico/test-js/13-addEventListener.html
+++ b/DW/2-intermedio/2-js-practico/test-js/13-addEventListener.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manipulación del DOM</title>
+    <title>Document Object Model</title>
 </head>
 <body>
-    <form id="form" action="">
-        <h1>Titulo del Documento</h1>
-        <input id="number1" placeholder="Ingresa un número">
-        <input id="number2" placeholder="Ingresa un número" onchange="console.log('Cambio en el input')">
+    <h1>Titulo DOM</h1>
+    <!--Para el segundo método se le agrega un ID al form-->
+    <form id="form">
+        <input id="number1" placeholder="Ingresa un numero">
+        <input id="number2" placeholder="Ingresa un numero">
+        <!--Para el tercer método cambiar a tipo button-->
         <button id="btnCalcular" type="button">Calcular</button>
-        
         <p id="result"></p>
     </form>
-
+    
     <script src="./13.script.js"></script>
 </body>
 </html>
