Calcular promedio y mediana

--- a/DW/2-intermedio/4.taller-js-mate-y-estadistica/resources/codigo/practice/coupon/index.html
+++ b/DW/2-intermedio/4.taller-js-mate-y-estadistica/resources/codigo/practice/coupon/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <h1>Calculate Discount</h1>
-    <label for="price">The price of the item is...</label><br>
-    <input type="number" id="price" class="price"><br>
+    <label for="price">The price of the item is:</label><br>
+    <input type="number" class="price" id="price"><br>
 
     <label for="coupon">Enter your coupon:</label><br>
-    <input type="text" id="coupon" class="coupon"><br>
+    <input type="text" class="coupon" id="coupon"><br>
 
-    <button class="buy">Buy now!!!</button><br>
+    <button class="buy">Buy now!!!</button>
+
     <p class="pay"></p>
 
     <script src="./main.js"></script>
