--- a/DW/2-intermedio/4.taller-js-mate-y-estadistica/resources/codigo/practice/1.mate/index.html
+++ b/DW/2-intermedio/4.taller-js-mate-y-estadistica/resources/codigo/practice/1.mate/index.html
@@ -4,25 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculate the length of the side</title>
+    <title>Calculator</title>
 </head>
 <body>
-    <h1>Square</h1>
-    
-    <h2>Perimeter of the square</h2>
-    <label for="side">Enter a side</label><br>
-    <input type="number" id="side" class="side"><br>
-    <button class="send-one">Send</button>
-    <p class="result-one"></p>
+    <header>
+        <h1>Calculator</h1>
+    </header>
+    <main class="square">
+        <h2>Square</h2>
+        <section>
+            <label for="side">Enter a side</label><br>
+            <input type="number" id="side" class="side"><br>
+            <button class="send-one">Send</button>
+        </section>
+        <section>
+            <h3>Perimeter of the square</h3>
+            <p class="result-one"></p>  
+        </section>
+        <section>
+            <h3>Area of the square</h3>
+            <p class="result-two"></p>
+        </section>
+    </main>
 
-    <h2>Area of the square</h2>
+    <main class="isosceles">
+        <h2>Triangle: Isosceles</h2>
+        <section>
+            <label for="side-triangle">Enter the sides (a, b) and the base</label>
+            <input type="number" placeholder="side a, b" id="side-triangle" class="sides">
+            <input type="number" placeholder="base" id="side-triangle" class="base"><br>
+            <button class="send-three">Send</button>
+        </section>
+        <section>
+            <h3>Perimeter of the triangle</h3>
+            <p class="result-tri-one"></p>
+        </section>
+        <section>
+            <h3>Area of the triangle</h3>
+            <p class="result-tri-two"></p>
+        </section>
+    </main>
 
-    <h1>Triangle</h1>
-    <h2>Perimeter of the triangle</h2>
-    <h2>Area of the triangle</h2>
-
-    <p>Open the console: Ctrl + Shift + I</p>
-
-    <script src="./mate.js"></script>
+    <script src="./square_triangle.js"></script>
 </body>
 </html>
