Practice: Moda - Estudiar como guardar datos en un obj

--- a/DW/2-intermedio/4.taller-js-mate-y-estadistica/resources/codigo/practice/2.mate/index.html
+++ b/DW/2-intermedio/4.taller-js-mate-y-estadistica/resources/codigo/practice/2.mate/index.html
@@ -30,8 +30,8 @@
     <main class="isosceles">
         <h2>Triangle: Isosceles</h2>
         <section>
-            <label for="side-triangle">Enter the sides (a, b) and the base</label>
-            <input type="number" placeholder="side a, b" id="side-triangle" class="sides">
+            <label for="side-triangle">Enter the sides (a, b) and the base</label><br>
+            <input type="number" placeholder="side a, b" id="side-triangle" class="sides"><br>
             <input type="number" placeholder="base" id="side-triangle" class="base"><br>
             <button class="send-three">Send</button>
         </section>
