--- a/DW/2-intermedio/4.taller-js-mate-y-estadistica/resources/codigo/practice/21.salario/index.html
+++ b/DW/2-intermedio/4.taller-js-mate-y-estadistica/resources/codigo/practice/21.salario/index.html
@@ -10,8 +10,8 @@
     <h1>Calculate Salaries</h1>
     <p>Open the console: Control + Shift + I</p>
 
-    <script src="platziMath.js"></script>
-    <script src="salarios.js"></script>
+    <script src="./platziMath.js"></script>
+    <script src="./salarios.js"></script>
     <script src="./analisis.js"></script>
 </body>
 </html>
