--- a/DW/2-intermedio/6.poo-js/resources/code/index.html
+++ b/DW/2-intermedio/6.poo-js/resources/code/index.html
@@ -7,6 +7,8 @@
     <title>POO</title>
 </head>
 <body>
-    <script src="./main.js"></script>
+    <script src="./05.obj-literal-vs-proto.js"></script>
+    <script src="./06.clases.js"></script>
+    <script src="./07.ventajas.js"></script>
 </body>
 </html>
