09. Manejo de clases: Ejercicio practico

--- a/DW/2-intermedio/6.poo-js/resources/code/index.html
+++ b/DW/2-intermedio/6.poo-js/resources/code/index.html
@@ -10,5 +10,6 @@
     <script src="./05.obj-literal-vs-proto.js"></script>
     <script src="./06.clases.js"></script>
     <script src="./07.ventajas.js"></script>
+    <script src="./08.manejo-clases.js"></script>
 </body>
 </html>
