10. Abstracción en js

--- a/DW/2-intermedio/6.poo-js/resources/code/index.html
+++ b/DW/2-intermedio/6.poo-js/resources/code/index.html
@@ -11,5 +11,6 @@
     <script src="./06.clases.js"></script>
     <script src="./07.ventajas.js"></script>
     <script src="./08.manejo-clases.js"></script>
+    <script src="./10.abstraccion.js"></script>
 </body>
 </html>
