12. Getters and Setters en js

--- a/DW/2-intermedio/6.poo-js/resources/code/index.html
+++ b/DW/2-intermedio/6.poo-js/resources/code/index.html
@@ -12,5 +12,6 @@
     <script src="./07.ventajas.js"></script>
     <script src="./08.manejo-clases.js"></script>
     <script src="./10.abstraccion.js"></script>
+    <script src="./11.getters-setters.js"></script>
 </body>
 </html>
