13. Módulos de ECS6: export import

--- a/DW/2-intermedio/6.poo-js/resources/code/index.html
+++ b/DW/2-intermedio/6.poo-js/resources/code/index.html
@@ -13,5 +13,10 @@
     <script src="./08.manejo-clases.js"></script>
     <script src="./10.abstraccion.js"></script>
     <script src="./11.getters-setters.js"></script>
+
+    <!-- <script src="./12.modulos.js" type="module"></script> -->
+    <script src="./12.module.mjs" type="module"></script>
+
+    <!-- <script type="module"></script> -->
 </body>
 </html>
