14. reto get set

--- a/DW/2-intermedio/6.poo-js/resources/code/index.html
+++ b/DW/2-intermedio/6.poo-js/resources/code/index.html
@@ -7,16 +7,17 @@
     <title>POO</title>
 </head>
 <body>
-    <script src="./05.obj-literal-vs-proto.js"></script>
+    <!-- <script src="./05.obj-literal-vs-proto.js"></script>
     <script src="./06.clases.js"></script>
     <script src="./07.ventajas.js"></script>
     <script src="./08.manejo-clases.js"></script>
     <script src="./10.abstraccion.js"></script>
-    <script src="./11.getters-setters.js"></script>
+    <script src="./11.getters-setters.js"></script> -->
 
     <!-- <script src="./12.modulos.js" type="module"></script> -->
-    <script src="./12.module.mjs" type="module"></script>
+    <!-- <script src="./12.module.mjs" type="module"></script> -->
 
     <!-- <script type="module"></script> -->
+    <script src="./14.playgrounds-get-set.js"></script>
 </body>
 </html>
