16. Herencia en js

--- a/DW/2-intermedio/6.poo-js/resources/code/index.html
+++ b/DW/2-intermedio/6.poo-js/resources/code/index.html
@@ -17,7 +17,8 @@
     <!-- <script src="./12.modulos.js" type="module"></script> -->
     <!-- <script src="./12.module.mjs" type="module"></script> -->
 
-    <!-- <script type="module"></script> -->
-    <script src="./14.playgrounds-get-set.js"></script>
+    <!-- <script type="module"></script> 
+    <script src="./14.playgrounds-get-set.js"></script> -->
+    <script src="./16.herencia.js"></script>
 </body>
 </html>
