19. Playgrounds sobrescribir métodos

--- a/DW/2-intermedio/6.poo-js/resources/code/index.html
+++ b/DW/2-intermedio/6.poo-js/resources/code/index.html
@@ -19,6 +19,10 @@
 
     <!-- <script type="module"></script> 
     <script src="./14.playgrounds-get-set.js"></script> -->
-    <script src="./16.herencia.js"></script>
+    <!-- <script src="./16.herencia.js"></script> -->
+    <!-- <script src="./18.polimorfismo.js"></script> -->
+    <script src="./19.Comments.js" type="module"></script>
+    <script src="./19.Student.js" type="module"></script>
+    <script src="./19.exercise.js" type="module"></script>
 </body>
 </html>
