--- a/DW/2-intermedio/13.api-rest-js-fundamentos/resources/code/7.proyecto/index.html
+++ b/DW/2-intermedio/13.api-rest-js-fundamentos/resources/code/7.proyecto/index.html
@@ -8,30 +8,33 @@
   </head>
   <body>
     <h1>Random Kittens</h1>
-    <section id="random">
-			<h2>Kittens List</h2>
-      <article>
-        <img id="img1" width="150" alt="Random kittens" />
-        <button>Save</button>
-      </article>
-      <article>
-        <img id="img2" width="150" alt="Random kittens" />
-        <button>Save</button>
-      </article>
-      <article>
-        <img id="img3" width="150" alt="Random kittens" />
-        <button>Save</button>
-      </article>
-
-      <button onclick="reload()">Random</button>
+    <main id="random">
+      <h2>Kittens List</h2>
+      <section class="container">
+        <!-- 
+        <figure>
+          <img id="img1" width="150" alt="Random kittens" />
+          <img class="save" src="./heart.svg" alt="Heart icon">
+        </figure>
+        <figure>
+          <img id="img2" width="150" alt="Random kittens" />
+          <img class="save" src="./heart.svg" alt="Heart icon">
+        </figure>
+        <figure>
+          <img id="img3" width="150" alt="Random kittens" />
+          <img class="save" src="./heart.svg" alt="Heart icon">
+        </figure> -->
     </section>
 
-    <section id="favorites">
-			<h2>Kittens Favorites</h2>
-      <article>
+      <button class="reload" onclick="reload()">Random</button>
+    </main>
+
+    <section class="favorites" id="favorites">
+      <h2>Kittens Favorites</h2>
+      <figure>
         <img id="img1" width="150" alt="Random kittens" />
-        <button>Delete</button>
-      </article>
+        <button class="delete">Delete</button>
+      </figure>
     </section>
 
     <script src="./main.js"></script>
