--- a/DW/2-intermedio/13.api-rest-js-fundamentos/resources/code/7.proyecto/index.html
+++ b/DW/2-intermedio/13.api-rest-js-fundamentos/resources/code/7.proyecto/index.html
@@ -26,7 +26,7 @@
         </figure> -->
     </section>
 
-      <button class="reload" onclick="reload()">Random</button>
+      <button class="reload" onclick="load_random()">Random</button>
     </main>
 
     <section class="favorites" id="favorites">
