10. POST: guardando kittens en favoritos

--- a/DW/2-intermedio/13.api-rest-js-fundamentos/resources/code/7.proyecto/index.html
+++ b/DW/2-intermedio/13.api-rest-js-fundamentos/resources/code/7.proyecto/index.html
@@ -24,17 +24,20 @@
           <img id="img3" width="150" alt="Random kittens" />
           <img class="save" src="./heart.svg" alt="Heart icon">
         </figure> -->
-    </section>
+      </section>
 
       <button class="reload" onclick="load_random()">Random</button>
     </main>
 
     <section class="favorites" id="favorites">
       <h2>Kittens Favorites</h2>
-      <figure>
-        <img id="img1" width="150" alt="Random kittens" />
-        <button class="delete">Delete</button>
-      </figure>
+      <div class="favorite__cat">
+        <!-- 
+        <figure>
+          <img id="img1" width="150" alt="Random kittens" />
+          <button class="delete">Delete</button>
+        </figure> -->
+      </div>
     </section>
 
     <script src="./main.js"></script>
