--- a/DW/2-intermedio/7.poo-js-intermedio/resources/code/index.html
+++ b/DW/2-intermedio/7.poo-js-intermedio/resources/code/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <h1>Intermediate POO</h1>
-    <script src="./main.js"></script>
+    <!-- <script src="./main.js"></script> -->
   </body>
 </html>
