--- a/DW/2-intermedio/7.poo-js-intermedio/resources/code/index.html
+++ b/DW/2-intermedio/7.poo-js-intermedio/resources/code/index.html
@@ -10,5 +10,8 @@
   <body>
     <h1>Intermediate POO</h1>
     <!-- <script src="./main.js"></script> -->
+    <script
+      src="./10.Playground-deepFreeze.mjs"
+      type="module"></script>
   </body>
 </html>
