--- a/DW/2-intermedio/7.poo-js-intermedio/resources/code/index.html
+++ b/DW/2-intermedio/7.poo-js-intermedio/resources/code/index.html
@@ -11,7 +11,7 @@
     <h1>Intermediate POO</h1>
     <!-- <script src="./main.js"></script> -->
     <script
-      src="./10.Playground-deepFreeze.mjs"
+      src="./12.factory-pattern-roro.mjs"
       type="module"></script>
   </body>
 </html>
