--- a/DW/2-intermedio/7.poo-js-intermedio/resources/code/index.html
+++ b/DW/2-intermedio/7.poo-js-intermedio/resources/code/index.html
@@ -9,9 +9,7 @@
   </head>
   <body>
     <h1>Intermediate POO</h1>
-    <!-- <script src="./main.js"></script> -->
-    <script
-      src="./12.factory-pattern-roro.mjs"
-      type="module"></script>
+    <!-- <script src="./main.js" type="module"></script> -->
+    <script src="./13.module-pattern-namespaces.js"></script>
   </body>
 </html>
