--- a/DW/2-intermedio/7.poo-js-intermedio/resources/code/index.html
+++ b/DW/2-intermedio/7.poo-js-intermedio/resources/code/index.html
@@ -10,6 +10,6 @@
   <body>
     <h1>Intermediate POO</h1>
     <!-- <script src="./main.js" type="module"></script> -->
-    <script src="./13.module-pattern-namespaces.js"></script>
+    <script src="./14.getters-setters.js"></script>
   </body>
 </html>
