--- a/DW/2-intermedio/7.poo-js-intermedio/resources/code/index.html
+++ b/DW/2-intermedio/7.poo-js-intermedio/resources/code/index.html
@@ -10,8 +10,6 @@
   <body>
     <h1>Intermediate POO</h1>
     <!-- <script src="./main.js" type="module"></script> -->
-    <script
-      src="./16.duck-typing.mjs"
-      type="module"></script>
+    <script src="./test/16.duck-typing.js"></script>
   </body>
 </html>
