--- a/DW/2-intermedio/14.api-rest-js-fundamentos/resources/code/practice/index.html
+++ b/DW/2-intermedio/14.api-rest-js-fundamentos/resources/code/practice/index.html
@@ -5,6 +5,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>API Cat</title>
   </head>
   <body>
@@ -14,6 +15,7 @@
         <!-- Content 
         <img src="" alt=""> -->
       </figure>
+      <button type="button">Random</button>
     </main>
 
     <script src="./main.mjs" type="module"></script>
