--- a/DW/2-intermedio/14.api-rest-js-fundamentos/resources/code/practice/index.html
+++ b/DW/2-intermedio/14.api-rest-js-fundamentos/resources/code/practice/index.html
@@ -17,6 +17,12 @@
       </figure>
       <button type="button">Random</button>
     </main>
+    <section>
+      <figure class="favorite-cats">
+        <!-- Content 
+        <img src="" alt=""> -->
+      </figure>
+    </section>
 
     <script src="./main.mjs" type="module"></script>
   </body>
