--- a/DW/2-intermedio/14.api-rest-js-fundamentos/resources/code/practice/index.html
+++ b/DW/2-intermedio/14.api-rest-js-fundamentos/resources/code/practice/index.html
@@ -11,17 +11,25 @@
   <body>
     <h1>Practice</h1>
     <main>
+      <section class="container">
+        <!-- Content
       <figure class="random-cats">
-        <!-- Content 
-        <img src="" alt=""> -->
+        
+        <img src="" alt=""> 
       </figure>
-      <button type="button">Random</button>
+    -->
+      </section>
+
+      <button type="button" class="random-button">
+        Random
+      </button>
     </main>
     <section>
       <figure class="favorite-cats">
         <!-- Content 
         <img src="" alt=""> -->
       </figure>
+      <!-- <button type="button">🔥</button> -->
     </section>
 
     <script src="./main.mjs" type="module"></script>
