--- a/DW/2-intermedio/14.api-rest-js-fundamentos/resources/code/practice/index.html
+++ b/DW/2-intermedio/14.api-rest-js-fundamentos/resources/code/practice/index.html
@@ -5,7 +5,9 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="./css/styles.css" />
     <title>API Cat</title>
   </head>
   <body>
@@ -25,10 +27,10 @@
       </button>
     </main>
     <section>
-      <figure class="favorite-cats">
-        <!-- Content 
-        <img src="" alt=""> -->
-      </figure>
+      <!-- <figure class="favorite-cats">
+        Content 
+        <img src="" alt=""> 
+      </figure>-->
       <!-- <button type="button">🔥</button> -->
     </section>
 
