--- a/DW/2-intermedio/14.api-rest-js-fundamentos/resources/code/practice/index.html
+++ b/DW/2-intermedio/14.api-rest-js-fundamentos/resources/code/practice/index.html
@@ -26,7 +26,7 @@
         Random
       </button>
     </main>
-    <section>
+    <section class="favorite-cats">
       <!-- <figure class="favorite-cats">
         Content 
         <img src="" alt=""> 
