--- a/DW/2-intermedio/14.api-rest-js/2.api-rest-js-ejemplos/resources/code/index.html
+++ b/DW/2-intermedio/14.api-rest-js/2.api-rest-js-ejemplos/resources/code/index.html
@@ -177,6 +177,7 @@
     </footer>
 
     <!-- <script src="./src/secrets.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script
       type="module"
       src="./src/main.mjs"></script>
