--- a/DW/2-intermedio/14.api-rest-js/2.api-rest-js-ejemplos/resources/code/index.html
+++ b/DW/2-intermedio/14.api-rest-js/2.api-rest-js-ejemplos/resources/code/index.html
@@ -178,8 +178,11 @@
 
     <!-- <script src="./src/secrets.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <!-- <script
+      type="module"
+      src="./src/main.mjs"></script> -->
     <script
       type="module"
-      src="./src/main.mjs"></script>
+      src="./src/navigation.mjs"></script>
   </body>
 </html>
