--- a/DW/2-intermedio/14.api-rest-js/2.api-rest-js-ejemplos/resources/code/index.html
+++ b/DW/2-intermedio/14.api-rest-js/2.api-rest-js-ejemplos/resources/code/index.html
@@ -42,7 +42,7 @@
         <input
           type="text"
           placeholder="Vengadores" />
-        <button>🔍</button>
+        <button id="searchBtn">🔍</button>
       </form>
     </header>
 
