--- a/DW/2-intermedio/019.empaquetadores/resources/code/webpack/public/index.html
+++ b/DW/2-intermedio/019.empaquetadores/resources/code/webpack/public/index.html
@@ -258,9 +258,7 @@
             </a>
             <span>💻</span>
           </div>
-          <main id="links">
-
-          </main>
+          <main id="links"></main>
           <!-- <div
             class="bg-yellow-200 px-4 py-5 w-full flex justify-between"
           >
