--- a/DW/2-intermedio/029.web-components/code/5.attributes/index.html
+++ b/DW/2-intermedio/029.web-components/code/5.attributes/index.html
@@ -9,10 +9,11 @@
     <title>Custom Elements</title>
   </head>
   <body>
-    <my-element>
-      <span slot="title">I'm a title</span>
-      <span slot="text">Testing...</span>
-    </my-element>
+    <my-element
+      title="I'm a title"
+      paragraph="Paragraph..."
+      img="https://i.postimg.cc/k4MtR4Zh/bitcoin-png.png"
+    ></my-element>
 
     <script type="module" src="./my-element.js"></script>
   </body>
