--- a/DW/2-intermedio/029.web-components/code/project/index.html
+++ b/DW/2-intermedio/029.web-components/code/project/index.html
@@ -6,10 +6,16 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Document</title>
+    <title>Project</title>
   </head>
   <body>
-    <product-card></product-card>
+    <product-card
+      img="./imgs/nike-blue.png"
+      title="Nike Zoom 2020"
+      collection="Running collection"
+      description="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero omnis eos iure quibusdam labore excepturi, amet aliquid modi quam. Sapiente dolorum dolores consequuntur ipsum quis quibusdam voluptates porro id perspiciatis?"
+      price="$300 USD"
+    ></product-card>
     <script type="module" src="./app.js"></script>
   </body>
 </html>
